# malaria-dashboard

./: Wetlands_and_Swamps_Final.prj  Wetlands_and_Swamps_Final.sbx  Wetlands_and_Swamps_Final.shx  app3.py  gunicorn_config.py  malaria_cases.csv  pyproject.toml  requirements.text
data/: Wetlands_and_Swamps_Final.dbf  Wetlands_and_Swamps_Final.sbn
